resources/stylesheets/fixes/desktop.less
@media ( min-width: 1201px ) {
	/* visualeditor */
	.ve-ui-overlay-global {
		z-index: 999 !important;
	}

	.ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
		top: 65px !important;
	}

	p.ve-ce-generated-wrapper,
	p.mw-empty-elt,
	td.ve-ce-tableCellableNode p,
	.mw-editfont-monospace p.ve-ce-paragraphNode {
		margin: 0 0 0 0 !important;
	}

	span.ve-ce-branchNode-slug {
		height: 1em;
		display: block;
	}

	.oo-ui-processDialog-actions-primary .oo-ui-widget-enabled a {
		color: #FFFFFF !important;
	}

	.oo-ui-processDialog-actions-safe .oo-ui-widget-enabled a {
		color: #222222 !important;
	}

	/* editor */
	.wikiEditor-ui-top {
		height: 0px;
	}
	#wikiEditor-section-characters .pages span {
		height: 1.5em;
	}

}

